tests/baselines/reference/parser_breakNotInIterationOrSwitchStatement2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Statements/BreakStatements/parser_breakNotInIterationOrSwitchStatement2.ts (1 errors) ====
    while (true) {
      function f() {
        break;
        ~~~~~~
!!! error TS1107: Jump target cannot cross function boundary.
      }
    }